--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-   
-<!--    nav#main-nav>ul>li.list-item*5>a{Link $}-->
+
+    <!--    nav#main-nav>ul>li.list-item*5>a{Link $}-->
     <nav id="main-nav">
         <ul>
             <li class="list-item"><a href="">Link 1</a></li>
@@ -19,7 +19,7 @@
             <li class="list-item"><a href="">Link 5</a></li>
         </ul>
     </nav>
-   
+
     <div id="selektor-uniwersalny">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur neque illum omnis inventore eaque dignissimos non atque repellendus, qui laboriosam molestias adipisci autem officia, nihil cupiditate, doloribus suscipit libero voluptatem!</p>
 
@@ -40,6 +40,17 @@
     <div class="relative">
         <div class="relative-inner"></div>
     </div>
+
+    <!--    jednostki miary-->
+    <!--    #jednostki-miary>#piksele{400px}-->
+
+    <div id="jednostki-miary">
+        <div id="piksele">400px</div>
+        <div id="em">20em</div>
+        <div id="procenty">50%</div>
+    </div>
+    
+    
 
 </body>
 
