--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <!--    font awesome-->
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -12,13 +14,18 @@
     <!--    nav#main-nav>ul>li.list-item*5>a{Link $}-->
     <nav id="main-nav">
         <ul>
-            <li class="list-item"><a href="">Link 1</a></li>
-            <li class="list-item"><a href="">Link 2</a></li>
+            <li class="list-item"><a href="https://www.google.pl/">Link 1</a></li>
+            <li class="list-item"><a href="https://allegro.pl/">Link 2</a></li>
             <li class="list-item"><a href="">Link 3</a></li>
             <li class="list-item"><a href="">Link 4</a></li>
             <li class="list-item"><a href="">Link 5</a></li>
+            <li class="list-item"><a href="http://onet.pl">Link 6</a></li>
         </ul>
     </nav>
+
+    <header id="main-header">
+        <h1>Tytuł strony</h1>
+    </header>
 
     <div id="selektor-uniwersalny">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur neque illum omnis inventore eaque dignissimos non atque repellendus, qui laboriosam molestias adipisci autem officia, nihil cupiditate, doloribus suscipit libero voluptatem!</p>
@@ -49,8 +56,26 @@
         <div id="em">20em</div>
         <div id="procenty">50%</div>
     </div>
-    
-    
+
+    <!--    pseudoklasy-->
+    <form action="">
+        <input type="text" placeholder="Wpisz imię"><br>
+        <input type="text" placeholder="Wpisz nazwisko"><br>
+        <input type="text" placeholder="Wpisz adres"><br>
+    </form>
+
+    <div id="dzieci">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, corporis excepturi! Perspiciatis repudiandae accusantium voluptatum, impedit, quas quae! Animi iste ipsum pariatur cumque culpa delectus velit vitae odio porro ratione.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, corporis excepturi! Perspiciatis repudiandae accusantium voluptatum, impedit, quas quae! Animi iste ipsum pariatur cumque culpa delectus velit vitae odio porro ratione.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, corporis excepturi! Perspiciatis repudiandae accusantium voluptatum, impedit, quas quae! Animi iste ipsum pariatur cumque culpa delectus velit vitae odio porro ratione.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, corporis excepturi! Perspiciatis repudiandae accusantium voluptatum, impedit, quas quae! Animi iste ipsum pariatur cumque culpa delectus velit vitae odio porro ratione.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, corporis excepturi! Perspiciatis repudiandae accusantium voluptatum, impedit, quas quae! Animi iste ipsum pariatur cumque culpa delectus velit vitae odio porro ratione.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, corporis excepturi! Perspiciatis repudiandae accusantium voluptatum, impedit, quas quae! Animi iste ipsum pariatur cumque culpa delectus velit vitae odio porro ratione.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, corporis excepturi! Perspiciatis repudiandae accusantium voluptatum, impedit, quas quae! Animi iste ipsum pariatur cumque culpa delectus velit vitae odio porro ratione.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, corporis excepturi! Perspiciatis repudiandae accusantium voluptatum, impedit, quas quae! Animi iste ipsum pariatur cumque culpa delectus velit vitae odio porro ratione.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, corporis excepturi! Perspiciatis repudiandae accusantium voluptatum, impedit, quas quae! Animi iste ipsum pariatur cumque culpa delectus velit vitae odio porro ratione.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, corporis excepturi! Perspiciatis repudiandae accusantium voluptatum, impedit, quas quae! Animi iste ipsum pariatur cumque culpa delectus velit vitae odio porro ratione.</p>
+    </div>
 
 </body>
 
