--- a/index.html
+++ b/index.html
@@ -77,6 +77,17 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, corporis excepturi! Perspiciatis repudiandae accusantium voluptatum, impedit, quas quae! Animi iste ipsum pariatur cumque culpa delectus velit vitae odio porro ratione.</p>
     </div>
 
+<!--    selektory atrybutów-->
+<div id="selektory-atrybutow">
+    <input type="text" title="opis">
+    <input type="text" title="opis pierwszy">
+    <input type="text" title="opis drugi">
+    <input type="text">
+    <input type="text">
+    <input type="text">
+    <input type="text">
+</div>
+   
 </body>
 
 </html>
